--- a/style.css
+++ b/style.css
@@ -2,11 +2,11 @@
 
 
 :root {
---primary-color: #026773;
---secondary-color: #3CA6A6;
---text-color: #024959;
---background-color: #F2E3D5;
---button-hover: #012E40;
+--primary-color: #ff00dd;
+--secondary-color: #001aff;
+--text-color: #108122;
+--background-color: #460808;
+--button-hover: #ffd900;
 --font-body: "Chocolate Classical Sans", serif;
 --font-titulo: "Rakkas", serif;
 }
